.kube/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ktswebinar
  labels:
    app.kubernetes.io/name: ktswebinar
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ktswebinar
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ktswebinar
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: ktswebinar
          image: igorcoding/ktswebinar:1.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
